==> Alex-Dev-Beep/flight-computer-arduino-uno/src/OLED.cpp <==
#include "OLED.h"
#include <Wire.h>
#define OLED_ADDR 0x3C

void oled_cmd(uint8_t cmd) {
  Wire.beginTransmission(OLED_ADDR);
  Wire.write(0x00);
  Wire.write(cmd);
  Wire.endTransmission();
}

void oled_data(uint8_t data) {
  Wire.beginTransmission(OLED_ADDR);
  Wire.write(0x40);
  Wire.write(data);
  Wire.endTransmission();
}

void oled_init() {
  Wire.begin();
  Serial.println("I2C iniciado");

  oled_cmd(0xAE);
  oled_cmd(0x20); oled_cmd(0x00);
  oled_cmd(0xB0);
  oled_cmd(0xC8);
  oled_cmd(0x00);
  oled_cmd(0x10);
  oled_cmd(0x40);
  oled_cmd(0x81); oled_cmd(0x7F);
  oled_cmd(0xA1);
  oled_cmd(0xA6);
  oled_cmd(0xA8); oled_cmd(0x3F);
  oled_cmd(0xA4);
  oled_cmd(0xD3); oled_cmd(0x00);
  oled_cmd(0xD5); oled_cmd(0x80);
  oled_cmd(0xD9); oled_cmd(0xF1);
  oled_cmd(0xDA); oled_cmd(0x12);
  oled_cmd(0xDB); oled_cmd(0x40);
  oled_cmd(0x8D); oled_cmd(0x14);
  oled_cmd(0xAF);
}
